Fix overflowing contents

--- a/src/css/jsoneditor.css
+++ b/src/css/jsoneditor.css
@@ -291,6 +291,7 @@ div.jsoneditor code.jsoneditor-preview {
 div.jsoneditor.jsoneditor-mode-preview pre.jsoneditor-preview {
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
   overflow: auto;
   padding: 2px;
   margin: 0;
